# retro-ruffles

./: .gitignore  Cargo.toml  index.html  retro-ruffles-2aa2a6f2acaa3c9e.js  retro-ruffles-81145dd77ee9ca27.js  retro-ruffles-9fddc107a5989dfd.js  retro-ruffles-e6eef80ede50a693.js
.github/workflows/: release.yaml
assets/data/: trivia.game-data.ron
assets/level/: level.ldtk
assets/textures/: level.ldtk  level_alt.ldtk  void.assets.ron
src/: audio.rs  end.rs  lib.rs  loading.rs  main.rs  menu.rs
src/actions/: mod.rs
src/animation/: from_component.rs  mod.rs
src/clock/: event_scheduler.rs  mod.rs
src/console/: event.rs  mod.rs  systems.rs  utils.rs
src/game_over/: mod.rs  systems.rs
src/levels/: components.rs  mod.rs  systems.rs
src/player/: alt.rs  entities.rs  mod.rs
src/trigger/: bundles.rs  components.rs  mod.rs  systems.rs
src/ui/: mod.rs
